# libwdi

./: .gitattributes  .gitignore  AUTHORS  CNAME  ChangeLog  ChangeLog (Zadig)  ChangeLog_README.creole  Makefile.am  NEWS  README  README.md  Zadig_win.ver  Zadig_win_5.ver  Zadig_win_6.0.ver  Zadig_win_x64_6.0.ver  Zadig_win_x86_5.ver  _bm.sh  _bump.sh  _bz.cmd  _chlver.sh  _chver.sh  _chzver.sh  _coverity.cmd  _detect-amend.sh  _pre-commit.sh  _release.sh  _sign.cmd  ads.txt  appveyor.yml  autogen.sh  bm.sh  bump.sh  configure.ac  ddk_build.cmd  index.html  libusb-wdi_2008.sln  libwdi.sln  libwdi_2008.sln  libwdi_2010.sln  libwdi_README.creole  (+3 more)
.github/workflows/: codeql.yml  coverity.yml  mingw.yml  vs2019.yml  vs2022.yml
common/: cathash.c  msapi_utf8.h
common/.msvc/: cathash_2010.vcxproj
common/7z/: Makefile.am
common/7z/.msvc/: 7z.vcxproj  7z.vcxproj.filters  7z_sources
common/getopt/.msvc/: getopt.vcxproj  getopt_sources
common/profile/: Makefile.am  profile.c  profile.h
common/profile/.msvc/: profile_2010.vcxproj  profile_2010.vcxproj.filters  profile_sources
downloads/: header.html  index.html
embedder/: Makefile.am  embedder.c  embedder_2008.vcproj
examples/: Makefile.am  _cat_in_preset.cfg  common_controls_and_elevation.manifest  elevation.manifest  inf_wizard.c  inf_wizard.manifest  inf_wizard_2008.vcproj  inf_wizard_2010.vcxproj  inf_wizard_2010.vcxproj.filters  inf_wizard_rc.rc  inf_wizard_sources  libusb-win32_version.h  libusb-win32_version.rc  profile.c  resource.h  sample.cfg  setdrv.c  setdrv.manifest  setdrv.rc  setdrv_2008.vcproj  setdrv_gui.c  setdrv_gui.h  setdrv_gui.manifest  setdrv_gui.rc  setdrv_gui_2008.vcproj  setdrv_gui_sources  setdrv_sources  setup.c  setup_2008.vcproj  sign.bat  usb_vendors.c  usb_vendors.h  wdi-simple.c  wdi-simple.iss  wdi-simple.nsi  wdi-simple.rc  wdi-simple_2008.vcproj  wdi-simple_2010.vcxproj  wdi-simple_2010.vcxproj.filters  wdi-simple_sources  (+26 more)
examples/.msvc/: inf_wizard.vcxproj  inf_wizard.vcxproj.filters  inf_wizard_2008.vcproj  inf_wizard_2010.vcxproj  inf_wizard_sources  wdi-simple.vcxproj  wdi-simple.vcxproj.filters  wdi-simple_2008.vcproj  wdi-simple_2010.vcxproj  wdi-simple_sources  zadic.vcxproj  zadic_2008.vcproj  zadic_2010.vcxproj  zadic_2010.vcxproj.filters  zadic_sources  zadig.vcxproj  zadig.vcxproj.filters  zadig_2008.vcproj  zadig_2010.vcxproj  zadig_2010.vcxproj.filters  zadig_sources
examples/getopt/: getopt.c  getopt.vcproj  getopt.vcxproj  getopt.vcxproj.filters
examples/getopt/.msvc/: getopt.vcproj  getopt.vcxproj
examples/libconfig/: Makefile.am  grammar.c  grammar.h  libconfig.c  libconfig.h  libconfig.vcproj  libconfig.vcxproj  libconfig.vcxproj.filters  libconfig_sources  scanctx.c  scanner.c  wincompat.h
installer/: Makefile.am  infs.h  installer.c  installer.h  installer_2008.vcproj  installer_library.c  installer_library.h  installer_library_2008.vcproj
lib/: Makefile.am  installer_library.c  installer_library.h  installer_library_2008.vcproj  libusb-wdi.def  logging.c  logging.h  usbi.h
libwdi/: .gitattributes  7z.c  7z.h  Makefile.am  bin2coff.c  detect_64build_2008.vcproj  detect_64build_2010.vcxproj  driver.wdi  embedded.h  embedder.c  embedder.h  embedder_2008.vcproj  embedder_2010.vcxproj  embedder_2010.vcxproj.filters  embedder_files.h  embedder_sources  infs.h  installer.c  installer.h  installer_2008.vcproj  installer_x64_2008.vcproj  installer_x64_2010.vcxproj  installer_x64_2010.vcxproj.filters  installer_x64_sources  installer_x86_2008.vcproj  installer_x86_2010.vcxproj  installer_x86_sources  libusb-win32.cat.in  libusb-win32.inf.in  libusb0.inf.in  libusbk.cat.in  libusbk.inf.in  libwdi.c  libwdi.def  libwdi.h  libwdi.rc  libwdi_2008.vcproj  libwdi_dlg.c  libwdi_dll_2008.vcproj  libwdi_dll_2010.vcxproj  (+21 more)
libwdi/.msvc/: bin2coff_2010.vcxproj  bin2coff_sources  buildsettings.props  detect_64build.vcxproj  embedder.vcxproj  embedder.vcxproj.filters  embedder_2008.vcproj  embedder_2010.vcxproj  installer_arm64.vcxproj  installer_x64.vcxproj  installer_x64_2008.vcproj  installer_x64_2010.vcxproj  installer_x64_2010.vcxproj.filters  installer_x86.vcxproj  installer_x86.vcxproj.filters  installer_x86_2008.vcproj  installer_x86_2010.vcxproj  libwdi_dll.vcxproj  libwdi_dll.vcxproj.filters  libwdi_dll_2008.vcproj  libwdi_dll_2010.vcxproj  libwdi_dll_2010.vcxproj.filters  libwdi_sources  libwdi_static.vcxproj  libwdi_static.vcxproj.filters  libwdi_static_2008.vcproj  libwdi_static_2010.vcxproj  libwdi_static_2010.vcxproj.filters
msvc/: config.h  stdint.h
utilities/: Makefile.am  README.creole  bin2coff.c  cathash.c  embedder.c  embedder.h  embedder_files.h
utilities/.msvc/: bin2coff_2010.vcxproj  bin2coff_2010.vcxproj.filters  bin2coff_sources  cathash_2010.vcxproj  cathash_2010.vcxproj.filters  cathash_sources  detect_64build_2008.vcproj  detect_64build_2010.vcxproj  embedder_2008.vcproj  embedder_2010.vcxproj  embedder_sources
